[package]
name = "raw"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
rd-interface = { path = "../../rabbit-digger/rd-interface/", version = "0.4" }
# rd-interface = "0.3"
serde = "1.0"
tracing = "0.1.26"
tokio-smoltcp = "0.1.13"
smoltcp = "0.7"
tokio = { version = "1.5.0", features = ["rt"] }
futures = "0.3"
lru_time_cache = "0.11"
parking_lot = "0.11.1"
once_cell = "1.7.2"

[target.'cfg(not(windows))'.dependencies]
rawsock = "0.3.0"

[target.'cfg(windows)'.dependencies]
pcap = "0.8.1"
